# ai-solution-architect

./: .gitignore  README.md  pyproject.toml  test-image
ai-solution-architect/: generator.py  main.py  visualiser.py
ai_architect/: generator.py  main.py  visualiser.py
test/: visualiser.py
tools/: image_resizer.py
